# JoystickGremlinr13

./: .gitignore  LICENSE  README.md  device_db.json  generate_wix.py  joystick_gremlin.py  joystick_gremlin.spec  pyproject.toml  qml_notes.md  resources.py  resources.qrc
about/: about.md
action_plugins/: __init__.py  common.py
dill/: __init__.py  inspect_dill.py
doc/: r14_intro.md
gh_page/: Gemfile  _config.yml  changelog.md  download.md  help.md  index.md  interface.md  introduction.md  quickstart.md  technical.md
gremlin/: __init__.py  actions.py  audio_player.py  auto_mapper.py  base_classes.py  cheatsheet.py  code_runner.py  common.py  config.py  device_helpers.py  device_initialization.py  error.py  event_handler.py  execution_graph.py  fsm.py  hints.py  input_cache.py  input_devices.py  input_refresh.py  intermediate_output.py  joystick_handling.py  keyboard.py  logical_device.py  macro.py  mode_manager.py  plugin_manager.py  process_monitor.py  profile.py  repeater.py  sendinput.py  shared_state.py  signal.py  spline.py  swap_devices.py  tree.py  tts.py  types.py  user_script.py  util.py  windows_event_hook.py
licenses/: pyinstaller.txt  pytest-qt.txt
qml/: ActionDragDropArea.qml  ActionList.qml  ActionNode.qml  ActionSelector.qml  AutoSizingMenu.qml  AxesStateCurrent.qml  AxesStateSeries.qml  BetterComboBox.qml  BetterProgressBar.qml  BootstrapIcons.qml  BootstrapIconsNames.qml  BottomBorder.qml  ButtonState.qml  CompactSwitch.qml  CompactSwitchIndicator.qml  ConfigGroup.qml  ConfigSection.qml  ConfigSectionButton.qml  DebugBox.qml  DeviceList.qml  (+60 more)
(+226 files in other folders)
