[tool.poetry]
package-mode = false
name = "JoystickGremlin"
version = "14.0rc1"
description = "A tool for configuring and managing joystick devices."
authors = ["WhiteMagic <white.magic@gmx.de>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://whitemagic.github.io/JoystickGremlin/"
repository = "https://github.com/WhiteMagic/JoystickGremlin"

[tool.poetry.dependencies]
jsonschema = ">=4.25"
python = ">=3.10, <3.13"
PySide6 = ">=6.8"
PyInstaller = ">=6.10"
pywin32 = ">=308"
pytest = ">=8.3"
pytest-subtests = "^0.10.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["ANN"]
lint.ignore = ["ANN401"]